Your commit message here

--- a/templates/users/analyst_dashboard.html
+++ b/templates/users/analyst_dashboard.html
@@ -198,6 +198,13 @@
                             </div>
                             <p class="mb-1">Generate and view analytical reports</p>
                         </a>
+                        <a href="{% url 'analysis' %}" class="list-group-item list-group-item-action">
+                            <div class="d-flex w-100 justify-content-between">
+                                <h6 class="mb-1">Generate New Reports</h6>
+                                <small class="text-muted">Create Report</small>
+                            </div>
+                            <p class="mb-1">Create new analytical reports from your data</p>
+                        </a>
                         <a href="#" class="list-group-item list-group-item-action under-development" data-bs-toggle="tooltip" data-bs-placement="top" title="This feature is currently under development">
                             <div class="d-flex w-100 justify-content-between">
                                 <h6 class="mb-1">Tweet Density Map</h6>
